# chatgpt-choicequiz-maker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
backend/.github/workflows/: lint.yml
backend/src/: main.py
backend/src/routers/: create.py
backend/src/schema/: quizzes_schema.py
backend/src/services/: GPTService.py  __init__.py  gpt_service.py  openai_service.py
frontend/: .dockerignore  .env.sample  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  provider.tsx
frontend/app/disclaimer/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/app/public/: disclaimer.md  privacy-policy.md  term-of-service.md
frontend/app/quiz/[id]/: page.tsx
frontend/app/result/: page.tsx
frontend/app/result/detail/: page.tsx
frontend/app/term-of-service/: page.tsx
frontend/components/: Button.tsx  Choice.tsx  CorrectJudge.tsx  Question.tsx
frontend/components/Button/: Button.test.tsx  Button.tsx
frontend/components/Choice/: Choice.test.tsx  Choice.tsx
frontend/components/CorrectJudge/: CorrectJudge.test.tsx  CorrectJudge.tsx
frontend/components/Footer/: Footer.test.tsx  Footer.tsx
frontend/components/Header/: Header.test.tsx  Header.tsx
frontend/components/LinkButton/: LinkButton.test.tsx  LinkButton.tsx
frontend/components/Loading/: Loading.test.tsx  Loading.tsx
frontend/components/NumSelector/: NumSelector.test.tsx  NumSelector.tsx
frontend/components/Question/: Question.test.tsx  Question.tsx
frontend/components/QuizNumInput/: QuizNumInput.test.tsx  QuizNumInput.tsx
frontend/components/RadioTab/: RadioTab.test.tsx  RadioTab.tsx
frontend/components/SententceField/: SentenceField.test.tsx  SentenceField.tsx
frontend/components/TextArea/: TextArea.test.tsx  TextArea.tsx
frontend/const/: commonConstant.ts
frontend/features/quiz/api/: getQuiz.ts  judgeCorrect.test.ts  judgeCorrect.ts
frontend/features/quiz/components/: Quiz.stories.tsx  Quiz.tsx  Result.tsx  TopField.stories.tsx  TopField.tsx
frontend/features/quiz/const/: layoutConstants.ts
frontend/layouts/: QuizLayout.tsx
frontend/libs/: apiLoading.ts  cmsSetting.ts  endpoint.ts
frontend/stores/: quizIsCorrectState.ts  quizListState.ts  quizNumState.ts  selectedOptionsState.ts
frontend/tests/unit/: Button.test.tsx  Choice.test.tsx  CorrectJudge.test.tsx  Question.test.tsx
frontend/types/: componentTypes.ts  pageParam.ts
(+31 files in other folders)
